[project]
name = "aerosight-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "opencv-python>=4.11.0.86",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "ultralytics>=8.3.146",
    "uvicorn>=0.34.2",
]
